--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,13 +22,13 @@ Imports:
     furrr, 
     tibble,
     fastmap (>= 1.2.0), 
-    BiocManager, 
+    BiocManager
 Suggests:
     testthat (>= 3.0.0),
-    roxygen2,
+    roxygen2
 Remotes:
     Rhtslib=bioc::3.3/Rhtslib, 
-    Rsamtools=bioc::3.3/Rsamtools,
+    Rsamtools=bioc::3.3/Rsamtools
 Config/testthat/edition: 3
 Encoding: UTF-8
 RoxygenNote: 7.3.2
