--- a/inst/extdata/Dockerfile
+++ b/inst/extdata/Dockerfile
@@ -69,6 +69,8 @@ RUN wget https://github.com/samtools/samtools/releases/download/1.9/samtools-1.9
 	./configure --prefix $(pwd) && \
 	make
 
+RUN installGithub.r \
+  FredHutch/pgmap
 
 ################# COPY over config files 
 COPY config config/
